# obs-text-slideshow

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  buildspec.json  formatcode.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/package-plugin/: action.yml
.github/scripts/: .build.zsh  Package-Windows.ps1
.github/workflows/: azure-pipelines.yml  clang-format.yml  main.yml
ci/linux/: build-ubuntu.sh  package-ubuntu.sh
ci/macos/: build-macos.sh  install-build-obs-macos.sh  install-dependencies-macos.sh  package-macos.sh
cmake/: ObsPluginHelpers.cmake
data/locale/: de-DE.ini  en-US.ini  it-IT.ini  tr-TR.ini  zh-CN.ini
installer/: installer-Windows.iss.in
src/: files.cpp  files.h  obs-text-freetype2-props.h  obs-text-freetype2-slideshow.c  obs-text-freetype2-slideshow.cpp  obs-text-gdiplus-props.h  obs-text-gdiplus-slideshow.c  obs-text-gdiplus-slideshow.cpp  obs-text-props.h  obs-text-slideshow-dock.cpp  obs-text-slideshow-dock.h  obs-text-slideshow-dock.ui  obs-text-slideshow.c  obs-text-slideshow.cpp  obs-text-slideshow.h  plugin-macros.h.in  plugin-main.c  plugin-main.cpp  utils.cpp  utils.h
src/transitions/: cut.cpp  cut.h  fade.cpp  fade.h  slide.cpp  slide.h  swipe.cpp  swipe.h  tranistion-utils.cpp  transition-utils.h  transition.h
